--- a/DostavkaNaMarket/Pages/Admin.razor
+++ b/DostavkaNaMarket/Pages/Admin.razor
@@ -140,7 +140,8 @@
                           </thead>
                           <tbody> 
                             @foreach(var doc in bsonDocuments)
-                            {   <tr onclick="">
+                            {   
+                                <tr data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="Click" Value="@doc["orderNum"]">
                                     <th scope="row">@doc["orderNum"]</th>
                                     <td>@doc["city"]</td>
                                     <td>@doc["dateDevivery"]</td>
@@ -153,6 +154,23 @@
                                     <td>@doc["finalAmount"] руб</td>
                                     <td>@doc["barcodes"]</td>
                                 </tr>
+                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                        <p>@order</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                        </div>
+                                    </div>
+                                    </div>
+                                </div>
                             }
                           </tbody>
                         </table>
@@ -168,6 +186,10 @@
 
                             }
                         <p>@date.ToString("dddd dd MMMM yyyy")</p>
+                        <p>@order</p>
+
+                        
+
                       <hr class="my-4">
                   </div>
                 </div>
@@ -190,6 +212,8 @@
     AdminModel adminModel = new AdminModel();
 
     List<BsonDocument> bsonDocuments = new List<BsonDocument>();
+
+    public string? order { get; set; }
 
     public string ConvertDate()
     {
@@ -225,6 +249,8 @@
         }
 
     }
+
+    
 
     private async Task Logout()
     {
