--- a/DostavkaNaMarket/Pages/_Layout.cshtml
+++ b/DostavkaNaMarket/Pages/_Layout.cshtml
@@ -13,6 +13,8 @@
     <link href="DostavkaNaMarket.styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/boxed-check.min.css">
 
+    <script src="~/js/bootstrap.js"></script>
+
     <script src="_content/BlazorDateRangePicker/clickAndPositionHandler.js"></script>
     <link rel="stylesheet" href="_content/BlazorDateRangePicker/daterangepicker.min.css" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
