--- a/DostavkaNaMarket/Pages/Admin.razor
+++ b/DostavkaNaMarket/Pages/Admin.razor
@@ -8,6 +8,7 @@
 
 @inject AuthenticationStateProvider authStateProvider
 @inject NavigationManager navManager
+@inject IJSRuntime JSRuntime
 
 <AuthorizeView>
     <Authorized>
@@ -142,7 +143,7 @@
                             @foreach(var doc in bsonDocuments)
                             {   
                                 order = doc["orderNum"].ToString();
-                                <tr data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="Click" @bind-value="order" @bind-value:event="oninput">
+                                <tr class="myclass" data-bs-toggle="modal" data-bs-target="#exampleModal" @onclick="OrderModal" id="@doc["orderNum"]">
                                     <th scope="row" >@doc["orderNum"]</th>
                                     <td>@doc["city"]</td>
                                     <td>@doc["dateDevivery"]</td>
@@ -155,24 +156,24 @@
                                     <td>@doc["finalAmount"] руб</td>
                                     <td>@doc["barcodes"]</td>
                                 </tr>
-                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                        <p>@order</p>
-                                        </div>
-                                        <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary">Save changes</button>
-                                        </div>
+                            }
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
+                                    <div class="modal-body">
+                                    <p>@text</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
                                     </div>
                                 </div>
-                            }
+                                </div>
+                            </div>
                           </tbody>
                         </table>
                       <hr class="my-4">
@@ -187,7 +188,7 @@
 
                             }
                         <p>@date.ToString("dddd dd MMMM yyyy")</p>
-                        <p>@order</p>
+                        <p>text</p>
 
                         
 
@@ -215,6 +216,12 @@
     List<BsonDocument> bsonDocuments = new List<BsonDocument>();
 
     public string? order { get; set; }
+
+    private MarkupString text { get; set; }
+    private async Task OrderModal()
+    {
+        text = new MarkupString(await JSRuntime.InvokeAsync<string>("OrderModal"));
+    }
 
     public string ConvertDate()
     {
