--- a/DostavkaNaMarket/Pages/_Layout.cshtml
+++ b/DostavkaNaMarket/Pages/_Layout.cshtml
@@ -15,6 +15,8 @@
 
     <script src="~/js/bootstrap.js"></script>
 
+    <script src="~/js/OrderInModal.js"></script>
+    
     <script src="_content/BlazorDateRangePicker/clickAndPositionHandler.js"></script>
     <link rel="stylesheet" href="_content/BlazorDateRangePicker/daterangepicker.min.css" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
